<resources>
    <string name="app_name">Clipit</string>
    <string name="logo2">logo2</string>
    <string name="logo1">logo1</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="log_in">Log in</string>
    <string name="log_in_text">Log In</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="go_to_login_page">Have an Account? Log in Now !</string>
    <string name="register_btn">Register</string>
    <string name="home">Home</string>
    <string name="contact_us">contact us</string>
    <string name="profile">Profile</string>
    <string name="Full_name">full name</string>
    <string name="have_an_account">register now !</string>

    <style name="AppTheme" parent="Theme.MaterialComponents.DayNight">
        <item name="android:statusBarColor">@color/design_default_color_primary_dark</item>
    </style>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Appontment">Appontment</string>
    <string name="calender">Calender</string>
    <string name="Appontments">Appontments</string>
</resources>
