<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <ImageView
        android:id="@+id/stash_logo2"
        android:layout_width="140dp"
        android:layout_height="90dp"
        android:layout_gravity="center"
        android:contentDescription="@string/logo2"
        android:src="@drawable/stash"
        app:cardCornerRadius="75dp"
        app:layout_constraintBottom_toTopOf="@+id/emailEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginText"
        app:layout_constraintVertical_bias="0.486" />

    <TextView
        android:id="@+id/loginText"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/log_in_text"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:autofillHints=""
        android:background="@drawable/rounded_edittext_bg"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColorHint="#546E7A"
        app:layout_constraintBottom_toTopOf="@+id/passwordEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginText"
        app:layout_constraintVertical_bias="0.83" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginBottom="12dp"
        android:autofillHints=""
        android:background="@drawable/rounded_edittext_bg"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColorHint="#546E7A"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent" />


    <Button
        android:id="@+id/button"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginBottom="320dp"
        android:background="@drawable/rounded_button"
        android:text="@string/log_in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/forgot_password_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:text="@string/forgot_your_password"
        android:textColor="@color/material_dynamic_primary0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:layout_constraintVertical_bias="0.023" />

</androidx.constraintlayout.widget.ConstraintLayout>