<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="0dp">


    <TextView
        android:id="@+id/loginText"
        android:layout_width="157dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/register"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/stash_logo2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.231" />

    <EditText
        android:id="@+id/exitTextName"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginBottom="8dp"
        android:autofillHints=""
        android:background="@drawable/rounded_edittext_bg"
        android:hint="@string/Full_name"
        android:inputType="textEmailAddress"
        android:textColorHint="#546E7A"
        app:layout_constraintBottom_toTopOf="@+id/emailEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginBottom="8dp"
        android:autofillHints=""
        android:background="@drawable/rounded_edittext_bg"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColorHint="#546E7A"
        app:layout_constraintBottom_toTopOf="@+id/confirm_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/stash_logo2"
        android:layout_width="140dp"
        android:layout_height="90dp"
        android:layout_gravity="center"
        android:layout_marginBottom="64dp"
        android:contentDescription="@string/logo2"
        android:src="@drawable/stash"
        app:cardCornerRadius="75dp"
        app:layout_constraintBottom_toTopOf="@+id/emailEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/Register_button"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginBottom="180dp"
        android:background="@drawable/rounded_button"
        android:text="@string/register_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/forgot_password_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_to_login_page"
        android:textColor="@color/material_dynamic_primary0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Register_button"
        app:layout_constraintVertical_bias="0.25" />

    <EditText
        android:id="@+id/password1"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginBottom="48dp"
        android:autofillHints=""
        android:background="@drawable/rounded_edittext_bg"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColorHint="#546E7A"
        app:layout_constraintBottom_toTopOf="@+id/Register_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/confirm_password"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginBottom="16dp"
        android:autofillHints=""
        android:background="@drawable/rounded_edittext_bg"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:textColorHint="#546E7A"
        app:layout_constraintBottom_toTopOf="@+id/password1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/emailEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stash_logo2" />

    <TextView
        android:id="@+id/msg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10sp"
        android:layout_marginStart="31dp"
        android:layout_marginEnd="31dp"

        android:text=""
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/Register_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password1"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>